--- a/public/index.html
+++ b/public/index.html
@@ -189,7 +189,19 @@
     'string.format', 'string.gmatch', 'string.gsub', 'string.len', 'string.lower', 'string.match',
     'string.rep', 'string.reverse', 'string.sub', 'string.upper', 'table.concat', 'table.insert',
     'table.maxn', 'table.remove', 'table.sort', 'tonumber', 'tostring', 'type', 'unpack',
-    'warn', "loadstring"
+    'warn', 'loadstring',
+    'isrbxactive', 'isrbxopen', 'getexecutorname', 'getsynasset', 'getcustomasset', 'writefile',
+    'readfile', 'appendfile', 'makefolder', 'isfile', 'isfolder', 'delfile', 'delfolder',
+    'listfiles', 'listfolders', 'getclipboard', 'setclipboard', 'syn.request',
+    'syn.queue_on_teleport', 'syn.secure_call', 'syn.protect_gui', 'syn.unprotect_gui',
+    'syn.set_thread_identity', 'syn.get_thread_identity', 'syn.context_set', 'syn.context_get',
+    'syn.create_secure_function', 'hookfunction', 'hookmetamethod', 'getgenv', 'getrenv',
+    'getreg', 'getgc', 'getrawmetatable', 'setrawmetatable', 'newcclosure', 'checkcaller',
+    'firetouchinterest', 'getnamecallmethod', 'setnamecallmethod', 'getscriptclosure',
+    'getprotos', 'getconstants', 'setconstant', 'getupvalues', 'setupvalue', 'getinfo',
+    'getcallingscript', 'getloadedmodules', 'getnilinstances', 'decompile', 'saveinstance',
+    'clonefunction', 'httpget', 'httppost', 'loadstring', 'fireclickdetector', 'firesignal',
+    'fireproximityprompt'
 ];
 const variables = [
     'game', 'workspace', 'players', 'script', 'services', 'replicatedStorage',
