--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,16 @@ const variables = [
     'serverStorage', 'serverScriptService', 'starterGui', 'starterPack', 'teams',
     'lighting', 'collectionService', 'runService', 'debris', 'httpService', 'userInputService',
     'Players', 'Workspace', 'Lighting', 'Teams', 'ReplicatedStorage', 'ServerScriptService',
-    'ServerStorage', 'StarterGui', 'StarterPack', "LocalPlayer", "Character", "Humanoid", "WalkSpeed", "JumpPower"
+    'ServerStorage', 'StarterGui', 'StarterPack', 'LocalPlayer', 'Character', 'Humanoid',
+    'WalkSpeed', 'JumpPower',
+    'TweenService', 'SoundService', 'PathfindingService', 'GuiService', 'TextService',
+    'TeleportService', 'MarketplaceService', 'BadgeService', 'GroupService', 'InsertService',
+    'DataStoreService', 'VirtualInputManager', 'PlayerGui', 'PlayerScripts', 'StarterPlayer',
+    'StarterCharacterScripts', 'StarterPlayerScripts', 'VRService', 'ProximityPromptService',
+    'HumanoidRootPart', 'Head', 'Torso', 'LeftLeg', 'RightLeg', 'LeftArm', 'RightArm', 'Animation',
+    'Camera', 'Mouse', 'BodyGyro', 'BodyVelocity', 'BodyPosition', 'BodyAngularVelocity', 'CFrame',
+    'Vector3', 'Ray', 'UDim2', 'Color3', 'SurfaceGui', 'ScreenGui', 'TextLabel', 'TextButton',
+    'ImageLabel', 'ImageButton'
 ];
 
         monaco.editor.defineTheme('luauTheme', {
