--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,12 @@
     'getprotos', 'getconstants', 'setconstant', 'getupvalues', 'setupvalue', 'getinfo',
     'getcallingscript', 'getloadedmodules', 'getnilinstances', 'decompile', 'saveinstance',
     'clonefunction', 'httpget', 'httppost', 'loadstring', 'fireclickdetector', 'firesignal',
-    'fireproximityprompt'
+    'fireproximityprompt', 'debug.getupvalue', 'debug.setupvalue', 'debug.getinfo', 'debug.getlocal', 'debug.setlocal',
+    'debug.traceback', 'debug.sethook', 'debug.gethook', 'debug.getregistry', 'debug.getmetatable',
+    'debug.setmetatable', 'debug.upvaluejoin', 'debug.upvalueid', 'getconnections', 'getobjects',
+    'gethiddenproperty', 'sethiddenproperty', 'getsenv', 'setreadonly', 'isreadonly',
+    'getrenv', 'setrenv', 'debug.setfenv', 'debug.getfenv', 'getrawclosure', 'setrawclosure',
+    'getthreadcontext', 'setthreadcontext', 'debug.sethook', 'debug.gethook'
 ];
 const variables = [
     'game', 'workspace', 'players', 'script', 'services', 'replicatedStorage',
