--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
     'debug.setmetatable', 'debug.upvaluejoin', 'debug.upvalueid', 'getconnections', 'getobjects',
     'gethiddenproperty', 'sethiddenproperty', 'getsenv', 'setreadonly', 'isreadonly',
     'getrenv', 'setrenv', 'debug.setfenv', 'debug.getfenv', 'getrawclosure', 'setrawclosure',
-    'getthreadcontext', 'setthreadcontext', 'debug.sethook', 'debug.gethook'
+    'getthreadcontext', 'setthreadcontext', 'debug.sethook', 'debug.gethook', 'isluau'
 ];
 const variables = [
     'game', 'workspace', 'players', 'script', 'services', 'replicatedStorage',
