--- a/public/index.html
+++ b/public/index.html
@@ -176,37 +176,53 @@
             'true', 'false', 'nil', "in", "and", "or"
         ];
         const functions = [
-    'assert', 'collectgarbage', 'coroutine.create', 'coroutine.resume', 'coroutine.running',
-    'coroutine.status', 'coroutine.wrap', 'coroutine.yield', 'dofile', 'error', 'gcinfo',
-    'getfenv', 'getmetatable', 'io.close', 'io.flush', 'io.open', 'io.read', 'io.stderr',
-    'io.stdin', 'io.stdout', 'io.tmpfile', 'io.write', 'load', 'loadfile', 'loadstring', 'math.abs',
-    'math.acos', 'math.asin', 'math.atan', 'math.atan2', 'math.ceil', 'math.cos', 'math.deg',
-    'math.exp', 'math.floor', 'math.fmod', 'math.frexp', 'math.huge', 'math.ldexp', 'math.log',
-    'math.log10', 'math.max', 'math.min', 'math.modf', 'math.pi', 'math.pow', 'math.rad',
-    'math.random', 'math.randomseed', 'math.sin', 'math.sinh', 'math.sqrt', 'math.tan', 'math.tanh',
-    'next', 'not', 'pairs', 'pcall', 'print', 'rawequal', 'rawget', 'rawlen', 'rawset',
-    'select', 'setfenv', 'setmetatable', 'string.byte', 'string.char', 'string.dump', 'string.find',
-    'string.format', 'string.gmatch', 'string.gsub', 'string.len', 'string.lower', 'string.match',
-    'string.rep', 'string.reverse', 'string.sub', 'string.upper', 'table.concat', 'table.insert',
-    'table.maxn', 'table.remove', 'table.sort', 'tonumber', 'tostring', 'type', 'unpack',
-    'warn', 'loadstring',
-    'isrbxactive', 'isrbxopen', 'getexecutorname', 'getsynasset', 'getcustomasset', 'writefile',
-    'readfile', 'appendfile', 'makefolder', 'isfile', 'isfolder', 'delfile', 'delfolder',
-    'listfiles', 'listfolders', 'getclipboard', 'setclipboard', 'syn.request',
-    'syn.queue_on_teleport', 'syn.secure_call', 'syn.protect_gui', 'syn.unprotect_gui',
-    'syn.set_thread_identity', 'syn.get_thread_identity', 'syn.context_set', 'syn.context_get',
-    'syn.create_secure_function', 'hookfunction', 'hookmetamethod', 'getgenv', 'getrenv',
-    'getreg', 'getgc', 'getrawmetatable', 'setrawmetatable', 'newcclosure', 'checkcaller',
-    'firetouchinterest', 'getnamecallmethod', 'setnamecallmethod', 'getscriptclosure',
-    'getprotos', 'getconstants', 'setconstant', 'getupvalues', 'setupvalue', 'getinfo',
-    'getcallingscript', 'getloadedmodules', 'getnilinstances', 'decompile', 'saveinstance',
-    'clonefunction', 'httpget', 'httppost', 'loadstring', 'fireclickdetector', 'firesignal',
-    'fireproximityprompt', 'debug.getupvalue', 'debug.setupvalue', 'debug.getinfo', 'debug.getlocal', 'debug.setlocal',
-    'debug.traceback', 'debug.sethook', 'debug.gethook', 'debug.getregistry', 'debug.getmetatable',
-    'debug.setmetatable', 'debug.upvaluejoin', 'debug.upvalueid', 'getconnections', 'getobjects',
-    'gethiddenproperty', 'sethiddenproperty', 'getsenv', 'setreadonly', 'isreadonly',
-    'getrenv', 'setrenv', 'debug.setfenv', 'debug.getfenv', 'getrawclosure', 'setrawclosure',
-    'getthreadcontext', 'setthreadcontext', 'debug.sethook', 'debug.gethook', 'isluau'
+    'assert(condition, message)', 'collectgarbage(opt, arg)', 'coroutine.create(function)',
+    'coroutine.resume(co, ...)', 'coroutine.running()', 'coroutine.status(co)',
+    'coroutine.wrap(function)', 'coroutine.yield(...)', 'dofile(filename)', 'error(message, level)',
+    'gcinfo()', 'getfenv(f)', 'getmetatable(object)', 'io.close(file)', 'io.flush()',
+    'io.open(filename, mode)', 'io.read(...)', 'io.stderr()', 'io.stdin()', 'io.stdout()',
+    'io.tmpfile()', 'io.write(...)', 'load(chunk, chunkname, mode, env)', 'loadfile(filename)',
+    'loadstring(string)', 'math.abs(x)', 'math.acos(x)', 'math.asin(x)', 'math.atan(x)',
+    'math.atan2(y, x)', 'math.ceil(x)', 'math.cos(x)', 'math.deg(x)', 'math.exp(x)',
+    'math.floor(x)', 'math.fmod(x, y)', 'math.frexp(x)', 'math.huge()', 'math.ldexp(m, e)',
+    'math.log(x)', 'math.log10(x)', 'math.max(x, ...)', 'math.min(x, ...)', 'math.modf(x)',
+    'math.pi()', 'math.pow(x, y)', 'math.rad(x)', 'math.random(min, max)', 'math.randomseed(seed)',
+    'math.sin(x)', 'math.sinh(x)', 'math.sqrt(x)', 'math.tan(x)', 'math.tanh(x)', 'next(table, index)',
+    'not(value)', 'pairs(table)', 'pcall(f, ...)', 'print(...args)', 'rawequal(v1, v2)',
+    'rawget(table, index)', 'rawlen(table)', 'rawset(table, index, value)', 'select(index, ...)',
+    'setfenv(f, table)', 'setmetatable(table, metatable)', 'string.byte(s, i, j)', 'string.char(...)',
+    'string.dump(f)', 'string.find(s, pattern, init, plain)', 'string.format(formatstring, ...)',
+    'string.gmatch(s, pattern)', 'string.gsub(s, pattern, repl, n)', 'string.len(s)', 'string.lower(s)',
+    'string.match(s, pattern, init)', 'string.rep(s, n)', 'string.reverse(s)', 'string.sub(s, i, j)',
+    'string.upper(s)', 'table.concat(list, sep, i, j)', 'table.insert(table, [pos,] value)',
+    'table.maxn(table)', 'table.remove(table, pos)', 'table.sort(table, comp)', 'tonumber(e[, base])',
+    'tostring(value)', 'type(value)', 'unpack(list, i, j)', 'warn(...args)', 'loadstring(string)',
+    'isrbxactive()', 'isrbxopen()', 'getexecutorname()', 'getsynasset(asset)', 'getcustomasset(asset)',
+    'writefile(filename, contents)', 'readfile(filename)', 'appendfile(filename, contents)',
+    'makefolder(foldername)', 'isfile(filename)', 'isfolder(foldername)', 'delfile(filename)',
+    'delfolder(foldername)', 'listfiles(foldername)', 'listfolders(foldername)', 'getclipboard()',
+    'setclipboard(value)', 'syn.request(options)', 'syn.queue_on_teleport(script)',
+    'syn.secure_call(func, ...)', 'syn.protect_gui(gui)', 'syn.unprotect_gui(gui)',
+    'syn.set_thread_identity(level)', 'syn.get_thread_identity()', 'syn.context_set(context)',
+    'syn.context_get()', 'syn.create_secure_function(func)', 'hookfunction(original, hook)',
+    'hookmetamethod(object, method, hook)', 'getgenv()', 'getrenv()', 'getreg()', 'getgc()',
+    'getrawmetatable(object)', 'setrawmetatable(object, metatable)', 'newcclosure(function)',
+    'checkcaller()', 'firetouchinterest(part, otherPart, toggle)', 'getnamecallmethod()',
+    'setnamecallmethod(method)', 'getscriptclosure(script)', 'getprotos(function)', 'getconstants(function)',
+    'setconstant(function, index, value)', 'getupvalues(function)', 'setupvalue(function, index, value)',
+    'getinfo(thread, func)', 'getcallingscript()', 'getloadedmodules()', 'getnilinstances()',
+    'decompile(instance)', 'saveinstance(instance)', 'clonefunction(func)', 'httpget(url)',
+    'httppost(url, data)', 'loadstring(string)', 'fireclickdetector(detector)', 'firesignal(signal)',
+    'fireproximityprompt(prompt)', 'debug.getupvalue(func, index)', 'debug.setupvalue(func, index, value)',
+    'debug.getinfo([thread,] function)', 'debug.getlocal(thread, level, index)',
+    'debug.setlocal(thread, level, index, value)', 'debug.traceback([thread,] message, level)',
+    'debug.sethook([thread,] hook, mask, count)', 'debug.gethook([thread])', 'debug.getregistry()',
+    'debug.getmetatable(object)', 'debug.setmetatable(object, metatable)', 'debug.upvaluejoin(f1, n1, f2, n2)',
+    'debug.upvalueid(func, index)', 'getconnections(signal)', 'getobjects(assetId)', 'gethiddenproperty(object, prop)',
+    'sethiddenproperty(object, prop, value)', 'getsenv(script)', 'setreadonly(table, boolean)',
+    'isreadonly(table)', 'getrenv()', 'setrenv()', 'debug.setfenv(f, env)', 'debug.getfenv(f)',
+    'getrawclosure(func)', 'setrawclosure(func, closure)', 'getthreadcontext()', 'setthreadcontext(context)',
+    'debug.sethook([thread,] hook, mask, count)', 'debug.gethook([thread])', 'isluau()'
 ];
 const variables = [
     'game', 'workspace', 'players', 'script', 'services', 'replicatedStorage',
