--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
 
     <div id="editorContainer"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.21.2/min/vs/loader.min.js"></script>
+    <script src="vs/loader.js"></script>
     <script>
         require.config({ paths: { 'vs': 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.21.2/min/vs' }});
         require(['vs/editor/editor.main'], function() {
